--- a/interviews/package.json
+++ b/interviews/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.18.0",
-    "jasmine": "^3.1.0"
+    "express": "^4.16.4",
+    "jasmine": "^3.1.0",
+    "nodemon": "^1.18.10"
   }
 }
