--- a/interviews/package.json
+++ b/interviews/package.json
@@ -11,7 +11,10 @@
   "dependencies": {
     "axios": "^0.18.0",
     "express": "^4.16.4",
-    "jasmine": "^3.1.0",
+    "jasmine": "^3.3.1",
     "nodemon": "^1.18.10"
+  },
+  "devDependencies": {
+    "npm-check-updates": "^3.1.1"
   }
 }
