--- a/interviews/requirements.txt
+++ b/interviews/requirements.txt
@@ -1,5 +1,7 @@
 argparse==1.4.0 
-Flask==0.12.2
-pytest==3.6.0
-requests==2.11.1
-voluptuous==0.11.1
+Flask==1.0.2
+pytest==4.3.1
+requests==2.21.0
+voluptuous==0.11.5
+mock==2.0.0
+pur==5.2.1
