--- a/package.json
+++ b/package.json
@@ -1,16 +1,13 @@
 {
-  "name": "interviews",
+  "name": "practice-vault",
   "version": "1.0.0",
-  "main": "index.js",
-  "directories": {
-    "lib": "lib"
-  },
-  "scripts": {},
-  "author": "",
-  "license": "ISC",
+  "author": "ridhwaans",
+  "license": "MIT",
   "dependencies": {
     "axios": "^0.18.0",
+    "crypto": "^1.0.1",
     "express": "^4.16.4",
+    "https": "^1.0.0",
     "jasmine": "^3.3.1",
     "nodemon": "^1.18.10"
   },
